--- a/react_course_fh/05-hook-app/src/index.css
+++ b/react_course_fh/05-hook-app/src/index.css
@@ -7,3 +7,10 @@ body {
 button {
   margin-right: 10px;
 }
+
+a {
+  margin-right: 5px;
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+}
+
