--- a/react_course_fh/07-characters-spa/src/styles.css
+++ b/react_course_fh/07-characters-spa/src/styles.css
@@ -1,20 +1,21 @@
 body {
-    background-color: rgb(28, 39, 42);
-    color: white;
+    background-color: rgba(85, 85, 85, 0.587);
+    color: rgb(255, 255, 255);
 }
 
 
 .navbar-nav .active {
-    border-bottom: 2px solid rgb(28, 39, 42);
+    /* border: 1px solid rgb(28, 39, 42); */
     color: rgb(28, 39, 42);
-    border-radius: 0;
 }
 
 .navbar-nav a {
     margin-right: 5px;
+    border-radius: 5px;
+    transition: all ease 0.5s;
 }
 
-.navbar-nav a:hover, .navbar-nav button:hover {
+.navbar-nav a:hover, .navbar-nav button:hover, .navbar-nav .active {
     background-color: rgb(233, 233, 233);
-    border-radius: 4px;
+
 }
