Section 14 : Single Page App

--- a/react_course_fh/07-characters-spa/src/characters/components/card.styles.css
+++ b/react_course_fh/07-characters-spa/src/characters/components/card.styles.css
@@ -10,6 +10,12 @@
     overflow: hidden;
     transition: .5s all;
 
+    a {
+        text-decoration: none;
+        margin-top: 0.6rem;
+        color: #191919;
+    }
+
     hr {
         width: 100%;
         border: none;
